[add]quantity_hash_method

--- a/app/views/public/orders/check.html.erb
+++ b/app/views/public/orders/check.html.erb
@@ -1,48 +1,62 @@
-<h1>注文情報確認</h1>
-<table class='table'>
-  <thead>
-    <tr>
-      <th>商品名</th>
-      <th>単価(税込)</th>
-      <th>数量</th>
-      <th>小計</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @cart_items.each do |cart_item| %>
-    <% item = Item.find(cart_item.item_id) %>
-    <tr>
-      <td><%= image_tag item.get_item_image(20,20) %>
-          <%= item.name %>
-      </td>
-      <td><%= with_tax_price(item.non_tax_price) %></td>
-      <td><%= cart_item.quantity %></td>
-      <td><%= subtotal(cart_item.quantity) %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-<table class='table'>
-  <tr>
-    <th>送料</th>
-    <td><%= @order.postage %></td>
-  </tr>
-  <tr>
-    <th>商品合計</th>
-    <td><%= total_price(@cart_items)%></td>
-  </tr>
-  <tr>
-    <th>請求金額</th>
-    <td><%= (total_price_undelimited(@cart_items) + @order.postage).to_s(:delimited) %></td>
-  </tr>
-</table>
-
-<h3>支払方法</h3>
-<%= @order.payment_method_i18n %>
-<h3>お届け先</h3>
-<%= "〒" + "#{@order.postal_code}" %><%= @order.address %></br>
-<%= @order.name %>
-
+<div class="row mb-2">
+  <div class="col-sm-4">
+    <div class="row justify-content-center">
+      <h5 class="text-center col-sm-5" style="background-color: #d3d3d3;">注文情報確認</h5>
+    </div>
+  </div>
+</div>
+<div class="row mb-4 justify-content-between">
+  <div class="col-sm-8">
+    <table class='table'>
+      <thead>
+        <tr class="table-active">
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @cart_items.each do |cart_item| %>
+        <% item = Item.find(cart_item.item_id) %>
+        <tr>
+          <td><%= image_tag item.get_item_image(20,20) %>
+              <%= item.name %>
+          </td>
+          <td><%= with_tax_price(item.non_tax_price) %></td>
+          <td><%= cart_item.quantity %></td>
+          <td><%= subtotal(cart_item.quantity) %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-sm-3">
+    <table class='table'>
+      <tr>
+        <th class="table-active">送料</th>
+        <td><%= @order.postage %></td>
+      </tr>
+      <tr>
+        <th class="table-active">商品合計</th>
+        <td><%= total_price(@cart_items)%></td>
+      </tr>
+      <tr>
+        <th class="table-active">請求金額</th>
+        <td><%= (total_price_undelimited(@cart_items) + @order.postage).to_s(:delimited) %></td>
+      </tr>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <h5 class="mr-3 font-weight-bold">支払方法</h5>
+  <%= @order.payment_method_i18n %>
+</div>
+<div class="row">
+  <h5 class="mr-3 font-weight-bold">お届け先</h5>
+  <%= "〒" + "#{@order.postal_code}" %><%= @order.address %></br>
+  <%= @order.name %>
+</div>
 <!--注文情報作成フォーム-->
 <%= form_with model: @order, url: public_orders_path do |f| %>
   <%= f.hidden_field :customer_id,    value: current_customer.id   %>
@@ -53,5 +67,7 @@
   <%= f.hidden_field :trade_status,   value: @order.trade_status   %>
   <%= f.hidden_field :total_payment,  value: total_price_undelimited(@cart_items) + @order.postage  %>
   <%= f.hidden_field :postage,        value: @order.postage        %>
-  <%= f.submit "注文を確定する", class: "btn btn-success" %>
+  <div class="row justify-content-center mt-5">
+    <%= f.submit "注文を確定する", class: "btn btn-success" %>
+  </div>
 <% end %>
