--- a/app/views/public/orders/conform.html.erb
+++ b/app/views/public/orders/conform.html.erb
@@ -1,1 +1,3 @@
-<h1>ご注文ありがとうございました!</h1>
+<div style="text-align:center;position:absolute;top:40%;left:50%;transform:translate(-50%, -60%);">
+  <h4>ご注文ありがとうございました!</h4>
+</div>
