--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,3 +2,11 @@
 .field_with_errors {
   display: contents;
 }
+.table th, .table td {
+  padding: 0.75rem;
+  border: 1px solid black;
+}
+.table thead th {
+    vertical-align: bottom;
+    border-bottom: 1px solid black;
+}
