--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -58,7 +58,7 @@
     </div>
     <div class ="row">
       <div class = "col-6">
-        <%= link_to "編集する", edit_admin_item_path(@item.id),class: 'btn btn-success px-4 py-2 col-6' %>
+        <%= link_to "編集する", edit_admin_item_path(@item.id),class: 'btn btn-success px-4 py-2 col-6 font-weight-bold' %>
       </div>
     </div>
   </div>
