--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,3 +2,23 @@
 .field_with_errors {
   display: contents;
 }
+.form-control::placeholder{
+  color: #cccccc;
+}
+
+.form_select{
+  // border: 1px solid #ced4da
+  border-radius: 5px;
+}
+
+.select_box_genre{
+  width: 100%;
+  border: 1px solid #ced4da;
+  height: calc(1.5em + 0.75rem + 2px);
+}
+
+.select_box_status{
+  width: 100px;
+  border: 1px solid #ced4da;
+  height: calc(1.5em + 0.75rem + 2px);
+}
