--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -44,8 +44,8 @@
       </div>
       <div class = "col-8">
         <%= form_with url: admin_order_path(@order), method: :patch , local:true do |f| %>
-          <%= f.select :trade_status, [['入金待ち', 0], ['入金確認', 1], ['製作中', 2], ['発送準備中', 3], ['発送済み', 4]], selected: "#{@order.trade_status_before_type_cast}"  %>
-          <%= f.submit "更新", class: 'btn btn-success' %>
+          <%= f.select :trade_status, [['入金待ち', 0], ['入金確認', 1], ['製作中', 2], ['発送準備中', 3], ['発送済み', 4]], {selected: "#{@order.trade_status_before_type_cast}"}, {class: "form_select select_box_status"}  %>
+          <%= f.submit "更新", class: 'btn btn-success font-weight-bold' %>
         <% end %>
       </div>
     </div>
@@ -71,8 +71,8 @@
           <td><%= order_item.quantity %></td>
           <td><%= subtotal(order_item.quantity) %></td>
           <td><%= form_with url: admin_order_item_path(order_item.id), method: :patch , local:true do |f| %>
-            <%= f.select :making_status, [['着手不可', 0], ['製作待ち', 1], ['製作中', 2], ['製作完了', 3]], selected: "#{order_item.making_status_before_type_cast}" %>
-            <%= f.submit "更新", class: 'btn btn-success' %>
+            <%= f.select :making_status, [['着手不可', 0], ['製作待ち', 1], ['製作中', 2], ['製作完了', 3]], {selected: "#{order_item.making_status_before_type_cast}"}, {class: "form_select select_box_status"} %>
+            <%= f.submit "更新", class: 'btn btn-success font-weight-bold' %>
             <% end %>
           </td>
         </tr>
