--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -37,8 +37,8 @@
                 <%= f.hidden_field :customer_id, :value => current_customer.id %>
               <% end %>
                 <%= f.hidden_field :item_id, :value => @item.id %>
-                <%= f.select :quantity, *[1..10], include_blank: "個数選択"  %>
-                <%= f.submit "カートに入れる", class: "btn btn-success"%>
+                <%= f.select :quantity, *[1..10],{prompt: "個数選択"}, {class: "form_select select_box_items"}  %>
+                <%= f.submit "カートに入れる", class: "btn btn-success font-weight-bold"%>
               <% end %>
           <% else %>
             <b class = "text-black-50">販売停止中</b>
