--- a/app/views/public/items/top.html.erb
+++ b/app/views/public/items/top.html.erb
@@ -51,12 +51,12 @@
             <%= image_tag 'no_image', size: "180x135" %>
           <% end %>
         <% end %>
-        <p><%= link_to item.name, public_item_path(item.id) %></p>
-        <p>￥<%= with_tax_price(item.non_tax_price) %></p>
+        <p class = "mb-1"><%= link_to item.name, public_item_path(item.id) %></p>
+        <p class = "mb-1">￥<%= with_tax_price(item.non_tax_price) %></p>
         <% if item.is_selling == true %>
-          <b class = "text-success">販売中</b>
+          <p class = "mb-3"><b class = "text-success">販売中</b></p>
         <% else %>
-          <b class = "text-black-50">販売停止中</b>
+          <p class = "mb-3"><b class = "text-black-50">販売停止中</b></p>
         <% end %>
       </div>
       <% end %>
