--- a/app/views/public/cart_items/_all_cart_items.html.erb
+++ b/app/views/public/cart_items/_all_cart_items.html.erb
@@ -21,7 +21,7 @@
           <td class="align-middle"><%= with_tax_price(item.non_tax_price)%></td>
           <td class="align-middle" style="width:150px">
             <%= form_with url: public_cart_item_path(cart_item), method: :patch, local: false do |f| %>
-            <%= f.select :quantity, [quantity_hash(cart_item)], selected: "#{cart_item.quantity}" %>
+            <%= f.select :quantity, quantity_hash(cart_item), selected: "#{cart_item.quantity}" %>
             <%= f.submit "変更", class: "btn btn-success"%>
             <% end %>
           </td>
