--- a/app/views/public/items/top.html.erb
+++ b/app/views/public/items/top.html.erb
@@ -1,19 +1,6 @@
 <div class = "row">
   <div class = "col-sm-3">
-    <table frame = "box">
-      <thead>
-        <tr>
-          <th class = "col-sm-1 text-center" style="border: 1px solid black;">ジャンル検索</th>
-        </tr>
-      </thead>
-      <tbody>
-      <% @genres.each do |genres| %>
-        <tr>
-          <td class = "col-sm-1" style="word-break: break-all;"><%= genres.name %></td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
+     <%= render "genres/genre_search", genres: @genres %>
   </div>
   <div class = "col-sm-9 col-xl-8">
     <div class = "row">
