[Finish]fix-admin-customer

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-3 d-flex justify-content-center">
-    <h3 class = "bg-light" style="background-color: #d3d3d3;"><b>マイページ</b></h3>
+    <h3 style="background-color: #d3d3d3;"><b>マイページ</b></h3>
   </div>
 </div>
 <br>
