--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,68 +1,80 @@
-<div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h3><%= @customer.family_name %><%= @customer.first_name %>さんの会員情報</h3>
+<div class="row">
+  <div class="col-sm-6 d-flex justify-content-center mb-3">
+    <h3 style="background-color: #d3d3d3;"><b>
+      <%= @customer.family_name %><%= @customer.first_name %>さんの会員情報
+    </b></h3>
+  </div>
+</div>
 
-      <% if @customer.errors.any? %>
-        <%= @customer.errors.count %>件のエラーが発生しました
-        <ul>
-          <% @customer.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      <% end %>
+<div class='row'>
+  <div class="col-sm-4"></div>
+  <div class="col-sm-4">
+    <%= render "public/shared/error_messages", resource: @customer %>
+  </div>
+  <div class="col-sm-4"></div>
+</div>
 
-      <%= form_with model: @customer, url: admin_customer_path, local:true do |f| %>
-        <div class="form-group">
-          <div class="form-inline">
-            <label>氏名</label>
-            <%= f.text_field :family_name, class: "form-control" %>
-            <%= f.text_field :first_name, class: "form-control" %>
-          </div>
-        </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>フリガナ</label>
-          <%= f.text_field :family_kana, class: "form-control" %>
-          <%= f.text_field :first_kana, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>郵便番号</label>
-          <%= f.text_field :postal_code, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>住所</label>
-          <%= f.text_field :address, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>電話番号</label>
-          <%= f.text_field :phone_number, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>メールアドレス　</label>
-          <%= f.text_field :email, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <%= f.radio_button :is_active, "true" %>
-          <%= f.label :is_active, "有効" %>
+<%= form_with model: @customer, url: admin_customer_path, local:true do |f| %>
+  <div class="row">
+    <%= f.label :id, "会員ID", class: "col-sm-2 mx-3 my-1" %>
+    <div class="col-sm-2 mx-3 my-1"><%= @customer.id %></div>
+    <div class="col-sm-8"></div>
+  </div>
 
-          <%= f.radio_button :is_active, "false" %>
-          <%= f.label :is_active, "退会" %>
-        </div>
-      </div>
-      <div class="form-group">
-          <%= f.submit "変更内容を保存", class: "btn btn-success" %>
-      </div>
+  <div class="row">
+    <%= f.label :family_name, "氏名", class: "col-sm-2 mx-3 my-1" %>
+    <%= f.text_field :family_name, class: "col-sm-2 mx-3 my-1 form-control" %>
+    <%= f.text_field :first_name, class: "col-sm-2 mx-3 my-1 form-control" %>
+    <div class="col-sm-6"></div>
+  </div>
+
+  <div class="row">
+    <%= f.label :family_kana, "フリガナ", class: "col-sm-2 mx-3 my-1" %>
+    <%= f.text_field :family_kana, class: "col-sm-2 mx-3 my-1 form-control" %>
+    <%= f.text_field :first_kana, class: "col-sm-2 mx-3 my-1 form-control" %>
+    <div class="col-sm-6"></div>
+  </div>
+
+  <div class="row">
+    <%= f.label :postal_code, "郵便番号", class: "col-sm-2 mx-3 my-1" %>
+    <%= f.text_field :postal_code, class: "col-sm-2 mx-3 my-1 form-control" %>
+    <div class="col-sm-8"></div>
+  </div>
+
+  <div class="row">
+    <%= f.label :address, "住所", class: "col-sm-2 mx-3 my-1" %>
+    <%= f.text_field :address, class: "col-sm-5 mx-3 my-1 form-control" %>
+    <div class="col-sm-5"></div>
+  </div>
+
+  <div class="row">
+    <%= f.label :phone_number, "電話番号", class: "col-sm-2 mx-3 my-1" %>
+    <%= f.text_field :phone_number, class: "col-sm-2 mx-3 my-1 form-control" %>
+    <div class="col-sm-8"></div>
+  </div>
+
+  <div class="row">
+    <%= f.label :email, "メールアドレス", class: "col-sm-2 mx-3 my-1" %>
+    <%= f.text_field :email, class: "col-sm-2 mx-3 my-1 form-control" %>
+    <div class="col-sm-8"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-2 mx-3 my-1"></div>
+    <div class="col-sm-5 mx-3 my-1">
+      <%= f.radio_button :is_active, "true" %>
+      <%= f.label :is_active, "有効" %>
+      <%= f.radio_button :is_active, "false" %>
+      <%= f.label :is_active, "退会" %>
+    </div>
+    <div class="col-sm-5"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-2 mx-3 my-1"></div>
+    <div class="col-sm-5 mx-3 my-1">
+      <%= f.submit "変更内容を保存", class: "btn btn-success" %>
+    </div>
+    <div class="col-sm-7">
+  </div>
     <% end %>
   </div>
 </div>
