--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,11 +1,16 @@
-<h3>会員一覧</h3>
-  <table class="table">
+<div class="row">
+  <div class="col-sm-3 d-flex justify-content-center mb-3">
+    <h3 style="background-color: #d3d3d3;"><b>会員一覧</b></h3>
+  </div>
+</div>
+
+  <table class="table table-hover">
     <thead>
-      <tr>
-        <th scope="col">会員ID</th>
-        <th scope="col">氏名</th>
-        <th scope="col">メールアドレス</th>
-        <th scope="col">ステータス</th>
+      <tr style="background-color: #d3d3d3;">
+        <th scope="col-sm-2">会員ID</th>
+        <th scope="colsm-3">氏名</th>
+        <th scope="col-sm-4">メールアドレス</th>
+        <th scope="col-sm-3">ステータス</th>
       </tr>
     </thead>
   <% @customers.each do |customer| %>
