--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,58 +1,78 @@
-<%= flash[:notice] %>
+<div class="row">
+  <div class="col-sm-8 mb-3">
+    <h3 class="col-sm-7" style="background-color: #d3d3d3;"><b>
+      <%= @customer.family_name %><%= @customer.first_name %>さんの会員情報
+    </b></h3>
+  </div>
+  <div class="col-sm-4"></div>
+</div>
 
-<h3><%= @customer.family_name %><%= @customer.first_name %>さんの会員情報</h3>
+<div class="row">
+  <div class="col-sm-2 mb-3">会員ID</div>
+  <div class="col-sm-6 mb-3"><%= @customer.id %></div>
+  <div class="col-sm-4"></div>
+</div>
 
-<table>
-  <tbody>
-    <tr>
-      <td>会員ID</td>
-      <td><%= @customer.id %></td>
-    </tr>
-    <tr>
-      <td>氏名</td>
-      <td><%= @customer.family_name %><%= @customer.first_name %></td>
-    </tr>
-    <tr>
-      <td>フリガナ</td>
-      <td><%= @customer.family_kana %><%= @customer.first_kana %></td>
-    </tr>
-    <tr>
-      <td>郵便番号</td>
-      <td><%= @customer.postal_code %></td>
-    </tr>
-    <tr>
-      <td>住所</td>
-      <td><%= @customer.address %></td>
-    </tr>
-    <tr>
-      <td>電話番号</td>
-      <td><%= @customer.phone_number %></td>
-    </tr>
-    <tr>
-      <td>メールアドレス</td>
-      <td><%= @customer.email %></td>
-    </tr>
-    <tr>
-      <td>会員ステータス</td>
-      <td>
-        <% if @customer.is_active == true %>
-          <p class = "text-success">有効</p>
-        <% else %>
-          <p class = "text-black-50">退会</p>
-        <% end %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <%= link_to edit_admin_customer_path(@customer), class: "btn btn-success" do %>
-          編集する
-        <% end %>
-      </td>
+<div class="row">
+  <div class="col-sm-2 mb-3">氏名</div>
+  <div class="col-sm-6 mb-3"><%= @customer.family_name %><%= @customer.first_name %></div>
+  <div class="col-sm-4"></div>
+</div>
+
+<div class="row">
+  <div class="col-sm-2 mb-3">フリガナ</div>
+  <div class="col-sm-6 mb-3"><%= @customer.family_kana %><%= @customer.first_kana %></div>
+  <div class="col-sm-4"></div>
+</div>
+
+<div class="row">
+  <div class="col-sm-2 mb-3">郵便番号</div>
+  <div class="col-sm-6 mb-3"><%= @customer.postal_code %></div>
+  <div class="col-sm-4"></div>
+</div>
+
+<div class="row">
+  <div class="col-sm-2 mb-3">住所</div>
+  <div class="col-sm-6 mb-3"><%= @customer.address %></div>
+  <div class="col-sm-4"></div>
+</div>
+
+<div class="row">
+  <div class="col-sm-2 mb-3">電話番号</div>
+  <div class="col-sm-6 mb-3"><%= @customer.phone_number %></div>
+  <div class="col-sm-4"></div>
+</div>
+
+<div class="row">
+  <div class="col-sm-2 mb-3">メールアドレス</div>
+  <div class="col-sm-6 mb-3"><%= @customer.email %></div>
+  <div class="col-sm-4"></div>
+</div>
+
+<div class="row">
+  <div class="col-sm-2 mb-3">会員ステータス</div>
+  <div class="col-sm-6 mb-3">
+    <% if @customer.is_active == true %>
+      <p class = "text-success">有効</p>
+    <% else %>
+      <p class = "text-black-50">退会</p>
+    <% end %>
+  </div>
+  <div class="col-sm-4"></div>
+</div>
+
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-6">
+    <%= link_to edit_admin_customer_path(@customer), class: "btn btn-success" do %>
+      編集する
+    <% end %>
+  </div>
+  <div class="col-sm-4"></div>
+
       <!--<td>-->
       <!--  <　%= link_to class: "btn btn-primary" do %>-->
       <!--    注文履歴一覧を見る-->
       <!--  <　% end %>-->
       <!--</td>-->
-    </tr>
-  </tbody>
-</table>
+</div>
