--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-sm-3 mb-3 d-flex justify-content-center">
-    <h3 class = "bg-light" style="background-color: #d3d3d3;"><b>配送先編集</b></h3>
+    <h3 style="background-color: #d3d3d3;"><b>配送先編集</b></h3>
   </div>
 </div>
 
   <div class='row'>
-    <div class="col-sm-6">
+    <div class="col-sm-6"></div>
     <div class="col-sm-6">
       <%= render "public/shared/error_messages", resource: @address %>
     </div>
