--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-3 d-flex justify-content-center mb-3">
-    <h3 class = "bg-light" style="background-color: #d3d3d3;"><b>会員情報編集</b></h3>
+    <h3 style="background-color: #d3d3d3;"><b>会員情報編集</b></h3>
   </div>
 </div>
 
