--- a/app/views/public/items/top.html.erb
+++ b/app/views/public/items/top.html.erb
@@ -20,14 +20,16 @@
       <div class = "col-8 card border-0">
         <%= image_tag "top_image3.jpg", class: "card-img" %>
           <div class="card-img-overlay d-flex">
-            <p class="text-center align-self-center mx-auto">
-              <b>
-              ようこそ、ながのCAKEへ！<br>
-              このサイトは、ケーキ販売のECサイトになります。<br>
-              会員ない方も商品の閲覧はできますが、<br>
-              購入には会員登録が必要になります。<br>
-              </b>
-            </p>
+            <div class="d-flex align-items-center mx-auto px-2 my-5 image_hider_top">
+              <p class="text-center align-self-center mx-auto">
+                <b>
+                ようこそ、ながのCAKEへ！<br>
+                このサイトは、ケーキ販売のECサイトになります。<br>
+                会員ない方も商品の閲覧はできますが、<br>
+                購入には会員登録が必要になります。<br>
+                </b>
+              </p>
+            </div>
           </div>
       </div>
       <div class = "col-2">
