--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -18,31 +18,31 @@
 <br>
 <div class="row">
   <div class="col-sm-8">
-    <table class="table table-bordered">
+    <table class="table border border-dark">
       <tbody>
         <tr>
-          <td class="col-sm-2" style="background-color: #d3d3d3;">氏名</td></div>
-          <td class="col-sm-6"><%= @customer.family_name %>　<%= @customer.first_name %></td>
+          <th class="col-sm-2 border border-dark" style="background-color: #d3d3d3;">氏名</th></div>
+          <td class="col-sm-6 border border-dark"><%= @customer.family_name %>　<%= @customer.first_name %></td>
         </tr>
         <tr>
-          <td class="col-sm-2" style="background-color: #d3d3d3;">カナ</td>
-          <td class="col-sm-6"><%= @customer.family_kana %>　<%= @customer.first_kana %></td>
+          <th class="col-sm-2 border border-dark" style="background-color: #d3d3d3;">カナ</th>
+          <td class="col-sm-6 border border-dark"><%= @customer.family_kana %>　<%= @customer.first_kana %></td>
         </tr>
         <tr>
-          <td class="col-sm-2" style="background-color: #d3d3d3;">郵便番号</td>
-          <td class="col-sm-6"><%= @customer.postal_code %></td>
+          <th class="col-sm-2 border border-dark" style="background-color: #d3d3d3;">郵便番号</th>
+          <td class="col-sm-6 border border-dark"><%= @customer.postal_code %></td>
         </tr>
         <tr>
-          <td class="col-sm-2" style="background-color: #d3d3d3;">住所</td>
-          <td class="col-sm-6"><%= @customer.address %></td>
+          <th class="col-sm-2 border border-dark" style="background-color: #d3d3d3;">住所</th>
+          <td class="col-sm-6 border border-dark"><%= @customer.address %></td>
         </tr>
         <tr>
-          <td class="col-sm-2" style="background-color: #d3d3d3;">電話番号</td>
-          <td class="col-sm-6"><%= @customer.phone_number %></td>
+          <th class="col-sm-2 border border-dark" style="background-color: #d3d3d3;">電話番号</th>
+          <td class="col-sm-6 border border-dark"><%= @customer.phone_number %></td>
         </tr>
         <tr>
-          <td class="col-sm-2" style="background-color: #d3d3d3;">メールアドレス</td>
-          <td class="col-sm-6"><%= @customer.email %></td>
+          <th class="col-sm-2 border border-dark" style="background-color: #d3d3d3;">メールアドレス</th>
+          <td class="col-sm-6 border border-dark"><%= @customer.email %></td>
         </tr>
       </tbody>
     </table>
