--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,6 @@
 <div class = "row">
   <div class = "col-sm-3">
-     <%= render "genres/genre_search", genres: @genres %>
+     <%= render "public/genres/genre_search", genres: @genres %>
   </div>
     <div class = "col-sm-9">
       <h2><b>商品一覧</b><span class = "h4">(全<%= Item.all.count %>件)</span></h2>
