--- a/app/views/public/cart_items/_all_cart_items.html.erb
+++ b/app/views/public/cart_items/_all_cart_items.html.erb
@@ -1,32 +1,32 @@
 <div id="all_cart_items">
-  <table class="table table-bordered border-primary" >
+  <table class="table border border-dark" >
     <thead>
       <tr class="table-active">
         <!--単価小計の数値にclassがつけられないのわからぬ-->
-        <th>商品名</th>
-        <th>単価(税込)</th>
-        <th>数量</th>
-        <th>小計</th>
-        <th></th>
+        <th class="border border-dark">商品名</th>
+        <th class="border border-dark">単価(税込)</th>
+        <th class="border border-dark">数量</th>
+        <th class="border border-dark">小計</th>
+        <th class="border border-dark"></th>
       </tr>
     </thead>
     <tbody>
       <% cart_items.each do |cart_item| %>
       <% item = Item.find(cart_item.item_id) %>
         <tr>
-          <td>
+          <td class="border border-dark">
             <%= image_tag item.get_item_image(50,50), class: "mr-3" %>
             <%= item.name %>
           </td>
-          <td class="align-middle"><%= with_tax_price(item.non_tax_price)%></td>
-          <td class="align-middle" style="width:150px">
+          <td class="align-middle border border-dark"><%= with_tax_price(item.non_tax_price)%></td>
+          <td class="align-middle border border-dark" style="width:150px">
             <%= form_with url: public_cart_item_path(cart_item), method: :patch, local: false do |f| %>
             <%= f.select :quantity, quantity_hash(cart_item), selected: "#{cart_item.quantity}" %>
             <%= f.submit "変更", class: "btn btn-success"%>
             <% end %>
           </td>
-          <td class="align-middle"><%= subtotal(cart_item.quantity) %></td>
-          <td class="align-middle text-center" style="width:150px"><%= link_to "削除する", public_cart_item_path(cart_item), method: :delete, class: "btn btn-danger", remote: true %></td>
+          <td class="align-middle border border-dark"><%= subtotal(cart_item.quantity) %></td>
+          <td class="align-middle text-center border border-dark" style="width:150px"><%= link_to "削除する", public_cart_item_path(cart_item), method: :delete, class: "btn btn-danger", remote: true %></td>
         </tr>
       <% end %>
     </tbody>
