--- a/app/views/public/genres/_genre_search.html.erb
+++ b/app/views/public/genres/_genre_search.html.erb
@@ -1,13 +1,13 @@
 <table frame = "box">
   <thead>
     <tr>
-      <th class = "col-sm-1 text-center" style="border: 1px solid black;">ジャンル検索</th>
+      <th class = "col-sm-1 text-center border border-dark" style="border: 1px solid black;">ジャンル検索</th>
     </tr>
   </thead>
   <tbody>
     <% genres.each do |genre| %>
     <tr>
-      <td class = "col-sm-1" style="word-break: break-all;"><%= genre.name %></td>
+      <td class = "col-sm-1 " style="word-break: break-all;"><%= genre.name %></td>
     </tr>
     <% end %>
   </tbody>
