--- a/app/views/public/items/top.html.erb
+++ b/app/views/public/items/top.html.erb
@@ -1,6 +1,6 @@
 <div class = "row">
   <div class = "col-sm-3">
-     <%= render "genres/genre_search", genres: @genres %>
+     <%= render "public/genres/genre_search", genres: @genres %>
   </div>
   <div class = "col-sm-9 col-xl-8">
     <div class = "row">
