--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -7,36 +7,36 @@
 </div>
 
 
-<table class='table'>
+<table class='table border border-dark'>
   <thead>
     <tr class="table-active">
-     <th>注文日</th>
-     <th>配送先</th>
-     <th>注文商品</th>
-     <th>支払金額</th>
-     <th>ステータス</th>
-     <th>注文詳細</th>
+     <th class="border border-dark">注文日</th>
+     <th class="border border-dark">配送先</th>
+     <th class="border border-dark">注文商品</th>
+     <th class="border border-dark">支払金額</th>
+     <th class="border border-dark">ステータス</th>
+     <th class="border border-dark">注文詳細</th>
     </tr>
   </thead>
   <tbody>
     <% @orders.each do |order| %>
     <tr>
-     <td class="align-middle" style="width:140px"><%= order.created_at.strftime('%Y/%m/%d') %></td>
-     <td class="align-middle p-1">
+     <td class="align-middle border border-dark" style="width:140px"><%= order.created_at.strftime('%Y/%m/%d') %></td>
+     <td class="align-middle p-1 border border-dark">
          <%= "〒" + order.postal_code %></br>
          <%= order.address %></br>
          <%= order.name %>
      </td>
-     <td class="align-middle" style="width:140px">
+     <td class="align-middle border border-dark" style="width:140px">
          <% order_items = OrderItem.where(order_id: order.id) %>
          <% order_items.each do |order_item| %>
          <% item = Item.find(order_item.item_id)%>
          <%= item.name %></br>
          <% end %>
      </td>
-     <td class="align-middle p-1" style="width:100px"><%= order.total_payment.to_s(:delimited) + "円" %></td>
-     <td class="align-middle p-1" style="width:140px"><%= order.trade_status_i18n %></td>
-     <td class="text-center align-middle p-0" style="width:140px"><%= link_to "表示する",public_order_path(order), class: "btn btn-primary" %></td>
+     <td class="align-middle p-1 border border-dark" style="width:100px"><%= order.total_payment.to_s(:delimited) + "円" %></td>
+     <td class="align-middle p-1 border border-dark" style="width:140px"><%= order.trade_status_i18n %></td>
+     <td class="text-center align-middle p-0 border border-dark" style="width:140px"><%= link_to "表示する",public_order_path(order), class: "btn btn-primary" %></td>
     </tr>
     <% end %>
   </tbody>
