--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -8,43 +8,43 @@
 <div class="row">
   <div class="col-sm-8">
     <h5 class="font-weight-bold">注文情報</h5>
-    <table class='table'>
+    <table class='table border border-dark'>
         <tr>
-          <th class="table-active" style="width:150px">注文日</th>
-          <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+          <th class="table-active border border-dark" style="width:150px">注文日</th>
+          <td class="border border-dark"><%= @order.created_at.strftime('%Y/%m/%d') %></td>
         </tr>
         <tr>
-          <th class="table-active align-middle">配送先</th>
-          <td>
+          <th class="table-active align-middle border border-dark">配送先</th>
+          <td class="border border-dark">
             <%= "〒"+ @order.postal_code %></br>
             <%= @order.address %></br>
             <%= @order.name %>
           </td>
         </tr>
         <tr>
-          <th class="table-active">支払方法</th>
-          <td><%= @order.payment_method_i18n %></td>
+          <th class="table-active border border-dark">支払方法</th>
+          <td class="border border-dark"><%= @order.payment_method_i18n %></td>
         </tr>
         <tr>
-          <th class="table-active">ステータス</th>
-          <td><%= @order.trade_status_i18n %></td>
+          <th class="table-active border border-dark">ステータス</th>
+          <td class="border border-dark"><%= @order.trade_status_i18n %></td>
         </tr>
       </table>
   </div>
   <div class="col-sm-4">
     <h5 class="font-weight-bold">請求情報</h5>
-    <table class='table'>
+    <table class='table border border-dark'>
         <tr>
-          <th class="table-active">商品合計</th>
-          <td><%= total_price(@order_items) %></td>
+          <th class="table-active border border-dark">商品合計</th>
+          <td class="border border-dark"><%= total_price(@order_items) %></td>
         </tr>
         <tr>
-          <th class="table-active">配送料</th>
-          <td><%= @order.postage %></td>
+          <th class="table-active border border-dark">配送料</th>
+          <td class="border border-dark"><%= @order.postage %></td>
         </tr>
         <tr>
-          <th class="table-active">ご請求額</th>
-          <td><%= @order.total_payment.to_s(:delimited) %></td>
+          <th class="table-active border border-dark">ご請求額</th>
+          <td class="border border-dark"><%= @order.total_payment.to_s(:delimited) %></td>
         </tr>
       </table>
   </div>
@@ -52,23 +52,23 @@
 <div class="row">
   <div class="col-sm-10">
     <h5 class="font-weight-bold">注文内容</h5>
-    <table class='table'>
+    <table class='table border border-dark'>
     <thead>
       <tr class="table-active">
-        <th>商品</th>
-        <th style="width:150px">単価(税込)</th>
-        <th style="width:90px">個数</th>
-        <th style="width:90px">小計</th>
+        <th class="border border-dark">商品</th>
+        <th class="border border-dark" style="width:150px">単価(税込)</th>
+        <th class="border border-dark" style="width:90px">個数</th>
+        <th class="border border-dark" style="width:90px">小計</th>
       </tr>
     </thead>
     <tbody>
       <% @order_items.each do |order_item| %>
       <% item = Item.find(order_item.item_id) %>
       <tr>
-        <td><%= item.name %></td>
-        <td><%= with_tax_price(order_item.price) %></td>
-        <td><%= order_item.quantity %></td>
-        <td><%= subtotal(order_item.quantity) %></td>
+        <td class="border border-dark"><%= item.name %></td>
+        <td class="border border-dark"><%= with_tax_price(order_item.price) %></td>
+        <td class="border border-dark"><%= order_item.quantity %></td>
+        <td class="border border-dark"><%= subtotal(order_item.quantity) %></td>
       </tr>
       <% end %>
     </tbody>
