[Finish]header-layout

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,15 +1,17 @@
 @import '~bootstrap/scss/bootstrap';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
 .field_with_errors {
   display: contents;
 }
 
-.table th, .table td {
-  padding: 0.75rem;
-  border: 1px solid black;
-}
-.table thead th {
-    vertical-align: bottom;
-    border-bottom: 1px solid black;
+// .table th, .table td {
+//   padding: 0.75rem;
+//   border: 1px solid black;
+// }
+// .table thead th {
+//     vertical-align: bottom;
+//     border-bottom: 1px solid black;
 
 .form-control::placeholder{
   color: #cccccc;
@@ -31,4 +33,12 @@
   border: 1px solid #ced4da;
   height: calc(1.5em + 0.75rem + 2px);
 
+}
+
+
+form.font-awesome {
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
 }
