--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
         <div class="col-sm-2">
           <span>ながのCAKE</span>
         </div>
-        
+
           <% if customer_signed_in? %>
             <div class="col-sm-5">
               <span>ようこそ<%= "#{current_customer.family_name}" %>さん</span>
@@ -91,8 +91,14 @@
               </div>
             <div class="ml-5">
             <%= form_with class: "rootpageSearchForm" do |form| %>
-              <%= form.text_field :keyword, placeholder: "Search", id: 'Search_Form', class: "mr-sm-2" %>
-              <%= form.submit "Search", class: "btn btn-outline-success my-2 my-sm-0"%>
+              <div class="input-group mb-3">
+                <%= form.text_field :keyword, placeholder: "Search", id: 'Search_Form', class: "border border-dark border-right-0" %>
+              <div class="input-group-append">
+                <%= form.button :type => "submit", style: 'border-style: none;', class: "bg-white border border-dark border-left-0" do %>
+                  <i class='fas fa-search'></i>
+                <% end %>
+              </div>
+              </div>
             <% end %>
             </div>
           </div>
