--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -7,7 +7,7 @@
   <div class = "col">
     <table class='table table-hover table-inverse'>
       <thead>
-        <tr>
+        <tr class="table-active">
           <th>購入日時</th>
           <th>購入者</th>
           <th>注文個数</th>
