--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -120,7 +120,7 @@
 
     </div>
     <div class="col-sm-3 col-7">
-      <%= f.submit "新規登録ボタン" ,class: 'btn btn-sm btn-success form-control ' %>
+      <%= f.submit "新規登録" ,class: 'btn btn-sm btn-success form-control ' %>
     </div>
   </div>
   <% end %>
