--- a/app/views/admin/genres/_genre_index.html.erb
+++ b/app/views/admin/genres/_genre_index.html.erb
@@ -14,7 +14,7 @@
     </div>
   <% end %>
 
-  <table class='table col-sm-5'>
+  <table class='table col-sm-5 border-bottom'>
     <thead>
       <tr class="table-active">
         <th class="text-center">ジャンル</th>
