[Add]fix-public-customer-address-header

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -53,9 +53,9 @@
   <div class="col-sm-2 mb-3">会員ステータス</div>
   <div class="col-sm-6 mb-3">
     <% if @customer.is_active == true %>
-      <p class = "text-success">有効</p>
+      <p class = "text-success"><b>有効</b></p>
     <% else %>
-      <p class = "text-black-50">退会</p>
+      <p class = "text-black-50"><b>退会</b></p>
     <% end %>
   </div>
   <div class="col-sm-4"></div>
