--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -47,7 +47,7 @@
   </div>
   <div class="row">
     <div class="col-sm-2 mx-3 my-1"></div>
-    <%= f.submit "変更内容を保存", class: "btn btn-success col-sm-2 mx-3 my-1 ml-2" %>
+    <%= f.submit "編集内容を保存", class: "btn btn-success col-sm-2 mx-3 my-1 ml-2" %>
     <div class="col-sm-2"><%= link_to public_customer_confirmation_path, class: "btn btn-danger mx-3 my-1" do %>
       退会する
     <% end %></div>
